<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.RegisterActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/unlock_your"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black_text" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/username"
            android:inputType="text"
            android:imeOptions="actionNext" />


        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:drawableEnd="@drawable/ic_visibility_off"
            android:drawablePadding="8dp"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            />

        <Spinner
            android:id="@+id/genderSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            />

        <EditText
            android:id="@+id/dateOfBirthEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_of_birth"
            android:inputType="none"
            android:focusable="false"
            android:drawableEnd="@drawable/ic_calendar"
            android:drawablePadding="8dp"
            android:onClick="showDatePickerDialog" />

        <EditText
            android:id="@+id/weightEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/weight"
            android:inputType="number"
            android:imeOptions="actionNext" />

        <EditText
            android:id="@+id/heightEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/height"
            android:inputType="number"
            android:imeOptions="actionNext" />

        <Spinner
            android:id="@+id/activityLevelSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_health_conditions"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/healthConditionsChipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <com.google.android.material.chip.Chip
                android:id="@+id/kolesterolChip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/kolesterol" />

            <com.google.android.material.chip.Chip
                android:id="@+id/asamLambungChip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/asam_lambung" />

            <com.google.android.material.chip.Chip
                android:id="@+id/diabetesTipe1Chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/diabetes_tipe_1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/diabetesTipe2Chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/diabetes_tipe_2" />

            <com.google.android.material.chip.Chip
                android:id="@+id/darahTinggiChip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/darah_tinggi" />

            <com.google.android.material.chip.Chip
                android:id="@+id/darahRendahChip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/darah_rendah" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ususBuntuChip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/usus_buntu" />

        </com.google.android.material.chip.ChipGroup>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btn_orange"
            android:text="@string/register" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"    >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:textColor="@color/black_text"
                android:layout_marginEnd="21dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/loginLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_here"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/blue_text"
                android:clickable="true" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
